user story 2 incomplete

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,16 @@
 <h1 id='header'>Battle</h1>
 <h2 id='welcome'>Welcome, please enter your names</h2>
 <form action="/name" method="post">
+
     <input id="p1Name" type="text" name="player1">
     <input id="p2Name" type="text" name="player2">
     <input id="submitButton" type="submit" value="Enter">
 
 
 </form>
+<form action="/points" method="post">
+    <input id="p1Points" type = "text" name="points1">
+    <input id="p2Points" type = "text" name="points2">
+    <input id="submitButton" type="submit" value="Show Points">
+    
+    </form>
