--- a/views/name.ejs
+++ b/views/name.ejs
@@ -1,3 +1,8 @@
 <h1>Hello</h1>
+
 <h2 id='displayNames'><%= `Player 1: ${player1}` %></h2>
 <h2 id='displayNames'><%= `Player 2: ${player2}` %></h2>
+<form action="/points" method="post">
+<input id="submitButton" type="submit" value="Show Points">
+
+</form>
