refactor User Story 2

--- a/views/battle.ejs
+++ b/views/battle.ejs
@@ -1,3 +1,4 @@
-<h1>Hello</h1>
-<h2 id="displayPoints"><%= `${player1}: ${points1}` %></h2>
-<h2 id="displayPoints"><%= `${player2}: ${points2}` %></h2>
+<h2 id="displayNames"><%= `Player 1: ${player1}` %></h2>
+<h2 id="displayPoints"><%= `Score: ${points1}` %></h2>
+<h2 id="displayNames"><%= `Player 2: ${player2}` %></h2>
+<h2 id="displayPoints"><%= `Score: ${points2}` %></h2>
