User Story 3,5,7 completed

--- a/views/player1.ejs
+++ b/views/player1.ejs
@@ -1,7 +1,8 @@
+<h1> Player 2 has been hit -10 points</h1>
 <h2 id="displayNames"><%= `Player 1: ${player1}` %></h2>
 <h2 id="displayPoints"><%= `Score: ${points1}` %></h2>
-<form action= "/player1" method= "post">
-<input id="attackButton" type="submit" value="Attack"></input>
-</form>
 <h2 id="displayNames"><%= `Player 2: ${player2}` %></h2>
 <h2 id="displayPoints"><%= `Score: ${points2}` %></h2>
+<form action= "/player2" method= "post">
+<input id="attackButton" type="submit" value="Attack"></input>
+</form>
