--- a/views/player2.ejs
+++ b/views/player2.ejs
@@ -1,7 +1,8 @@
+<h1> Player 1 has been hit -10 points</h1>
 <h2 id="displayNames"><%= `Player 1: ${player1}` %></h2>
 <h2 id="displayPoints"><%= `Score: ${points1}` %></h2>
 <form action= "/player1" method= "post">
-<input id="attackButton" type="submit" value="Attack"></input>
-</form>
+    <input id="attackButton" type="submit" value="Attack"></input>
+    </form>
 <h2 id="displayNames"><%= `Player 2: ${player2}` %></h2>
 <h2 id="displayPoints"><%= `Score: ${points2}` %></h2>
